Corrected Twitter double scrollbar.

--- a/client/modules/twitter/twitter.import.less
+++ b/client/modules/twitter/twitter.import.less
@@ -6,7 +6,7 @@ section.twitter{
         .shadow(close);
     }
     iframe{
-        height: ~'calc(100vh - 285px)' !important; //Overrides inline height
+        height: ~'calc(100vh - 318px)' !important; //Overrides inline height
         max-width: 296px !important; //Overrides max-width
     }
 }
